# xclaw-agentguard-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  DEPLOYMENT.en.md  DEPLOYMENT.zh.md  KNOWN_LIMITATIONS.md
examples/: canary_demo.py  custom_detector_example.py
services/: com.xclaw.agentguard.plist  xclaw-agentguard.service
tests/: contract_verification_report.txt  test_anti_jacked.py  test_attacks.py  test_config_schema.py  test_config_watcher.py  test_core_integration.py  test_detection_result.py  test_error_contract.py  test_output_injection.py  test_performance.py  test_sandbox.py  test_version_core.py  test_version_manager.py
tests/integration/: __init__.py  test_integration.py
user_plugins/: README.md  __init__.py  plugin_manifest_example.json
user_plugins/example_webhook_notifier/: README.md  manifest.json  plugin.py
xclaw_agentguard/: __init__.py  __main__.py  base.py  cli.py  config.py  detection_result.py  error_contract.py  security_context.py
xclaw_agentguard/anti_jacked/: README.md  __init__.py  auto_recovery.py  baseline_generator.py  cli.py  immutable_log.py  integrity_monitor.py  tamper_detector.py
xclaw_agentguard/config_watcher/: __init__.py
xclaw_agentguard/core/: README.md  __init__.py  base_detector.py  canary_controller.py  canary_registry.py  config_schema.py  detection_result.py  extension_system.py  test_anti_jacked_ext_core.py  threat_intel.py  version_management.py
xclaw_agentguard/dashboard/: README.md  __init__.py  api.py  server.py
(+82 files in other folders)
