[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xclaw_agentguard"]

[project]
name = "xclaw-agentguard-framework"
version = "2.3.1"
description = "A Python library providing security detection capabilities for AI agent applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "XClaw AgentGuard Security Team"}
]
keywords = ["ai", "security", "detection", "agent", "threat", "injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "click>=8.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
engine = [
    "watchdog>=3.0.0",
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "watchdog>=3.0.0",
    "pyyaml>=6.0.0",
    "schedule>=1.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
xclaw-agentguard = "xclaw_agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/neil-njcn/xclaw-agentguard-framework"
Repository = "https://github.com/neil-njcn/xclaw-agentguard-framework.git"